<resources>
    <string name="app_name">Scheduler</string>
    <string name="title_activity_terms_">Terms_Activity</string>
    <string name="terms">Terms</string>
    <string name="term">Term</string>
    <string name="courses">Courses</string>
    <string name="are_you_sure">Are you sure? Only terms without courses will be deleted.</string>
    <string name="all_terms_deleted">Terms Have Been Deleted.</string>
    <string name="all_courses_deleted">All Courses Have Been Deleted.</string>
    <string name="start_date">Start Date: </string>
    <string name="end_date">End Date: </string>
    <string name="start">Start: </string>
    <string name="end">End: </string>
    <string name="title_activity_add__terms_">Add_Terms_Activity</string>
    <string name="save">Save</string>
    <string name="mm">12</string>
    <string name="dd">28</string>
    <string name="yyyy">2018</string>
    <string name="name">Name:</string>
    <string name="invalid_input">Invalid Input</string>
    <string name="title_activity_term__details_">Term_Details_Activity</string>
    <string name="course2">Course</string>
    <string name="course">Course:</string>
    <string name="delete_term">Delete this Term</string>
    <string name="course_list">Course List</string>
    <string name="add_course">Add a Course</string>
    <string name="create_a_new_course">Create a new Course</string>
    <string name="title_activity_create__course_">Create_Course_Activity</string>
    <string name="status">Status: </string>
    <string name="mentor_name">Mentor Name : </string>
    <string name="mentor_email">Mentor Email : </string>
    <string name="email_address">putemail@putemail.com</string>
    <string name="course_description">Course Description:</string>
    <string name="n_a">N/A</string>
    <string name="defaultNumber">2224446666</string>
    <string name="mentor_phoneNumber">Mentor Phone #:</string>
    <string name="add_aCourse_list">Add Courses List</string>
    <string name="are_you_sure2">All courses in this term will be removed. Are you sure?</string>
    <string name="cannot_delete">A term cannot be deleted if it has courses assigned to it.</string>
    <string name="title_activity_edit__term_">Edit_Term_Activity</string>
    <string name="edit_term">Edit this Term</string>
    <string name="create_a__term">Create a new Term</string>
    <string name="remove_term_course">Remove all courses</string>
    <string name="title_activity_course__details_">Course_Details_Activity</string>
    <string name="all_courses_removed">All courses have been removed.</string>
    <string name="are_you_sure3">Are you sure? All Courses will be deleted.</string>
    <string name="are_you_sure6">Are you sure? All Notes will be deleted.</string>
    <string name="are_you_sure7">Are you sure? This Note will be deleted.</string>
    <string name="are_you_sure8">Are you sure? All Assessments will be deleted.</string>
    <string name="are_you_sure9">Are you sure? This Assessment will be deleted.</string>
    <string name="delete_all_terms">Delete All Terms</string>
    <string name="delete_all_courses">Delete All Courses</string>
    <string name="edit_course">Edit this Course</string>
    <string name="delete_courses">Delete this Course</string>
    <string name="notes">Notes</string>
    <string name="assessments">Assessments</string>
    <string name="title_activity_edit__course_">Edit_Course_Activity</string>
    <string name="term_deleted">The term has been deleted</string>
    <string name="are_you_sure4">This term will be deleted. Are you sure?</string>
    <string name="course_deleted">The course has been deleted.</string>
    <string name="are_you_sure5">This course will be deleted. Are you sure?</string>
    <string name="todo">TODO</string>
    <string name="title_activity_create__course_notes_">Create_CourseNotes_Activity</string>
    <string name="create_a_note">Create A Note</string>
    <string name="delete_all_notes">Delete All Notes</string>
    <string name="notes_list">Notes List</string>
    <string name="note">Note</string>
    <string name="note_title">Note Title</string>
    <string name="all_notes_deleted">All notes have been deleted.</string>
    <string name="edit_note">Edit Note</string>
    <string name="delete_note">Delete Note</string>
    <string name="title_activity_edit__note_">Edit_Note_Activity</string>
    <string name="note_deleted">The note has been deleted</string>
    <string name="assessments_list">Assessment List</string>
    <string name="create_assessment">Create an Assessment</string>
    <string name="delete_all_assessments">Delete Assessments</string>
    <string name="all_assessments_deleted">All assessments have been deleted.</string>
    <string name="title_activity_create__assessments_">Create_Assessments_Activity</string>
    <string name="description">Description</string>
    <string name="assessment">Assessment</string>
    <string name="edit_assessment">Edit Assessment</string>
    <string name="delete_assessment">Delete Assessment</string>
    <string name="assessment_code">Assessment Code</string>
    <string name="assessment_deleted">The assessment has been deleted</string>
    <string name="title_activity_edit__assessment_">Edit_Assessment_Activity</string>
    <string name="alert">Set Alert</string>
    <string name="goal_date">Goal Date: </string>
    <string name="note_image">Note Image</string>
    <string name="wgu_logo">Wgu logo</string>
    <string name="assess_code">Assessment Code:</string>
</resources>
