<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.sj_sc.scheduling.Term_Details_Activity">

    <item
        android:id="@+id/action_edit_term"
        android:orderInCategory="100"
        android:title="@string/edit_term"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_term"
        android:orderInCategory="101"
        android:title="@string/delete_term"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_add_course"
        android:orderInCategory="102"
        android:title="@string/add_course"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_term_courses"
        android:orderInCategory="103"
        android:title="@string/remove_term_course"
        app:showAsAction="never" />

</menu>