<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.sj_sc.scheduling.Course_Details_Activity">

    <item
        android:id="@+id/action_edit_course"
        android:orderInCategory="100"
        android:title="@string/edit_course"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_course"
        android:orderInCategory="101"
        android:title="@string/delete_courses"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_open_notes"
        android:orderInCategory="102"
        android:title="@string/notes"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_open_assessments"
        android:orderInCategory="103"
        android:title="@string/assessments"
        app:showAsAction="never" />

</menu>