<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Create_Terms_Activity"
    tools:showIn="@layout/activity_create__terms_">

    <EditText
        android:id="@+id/startMonth"
        android:layout_width="51dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView"
        android:ems="10"
        android:inputType="date"
        android:text="@string/mm"
        android:layout_toEndOf="@+id/textView"
        android:layout_marginStart="10dp"/>

    <EditText
        android:id="@+id/startDay"
        android:layout_width="51dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/startMonth"
        android:ems="10"
        android:inputType="date"
        android:text="@string/dd"
        android:layout_toEndOf="@+id/startMonth"
        android:layout_marginStart="10dp"/>


    <EditText
        android:id="@+id/startYear"
        android:layout_width="51dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/startMonth"
        android:ems="10"
        android:inputType="date"
        android:text="@string/yyyy"
        android:layout_toEndOf="@+id/startDay"
        android:layout_marginStart="10dp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="122dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="11dp"
        android:layout_marginTop="134dp"
        android:text="@string/start_date"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/termViewT"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView"
        android:layout_marginTop="31dp"
        android:text="@string/term"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/editTitle"
        android:layout_width="226dp"
        android:layout_height="wrap_content"

        android:layout_alignTop="@+id/termViewT"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@+id/termViewT"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name" />

    <TextView
        android:id="@+id/endDate"
        android:layout_width="117dp"
        android:layout_height="46dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView"
        android:layout_marginTop="221dp"
        android:text="@string/end_date"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/endMonth"
        android:layout_width="51dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/endDate"
        android:ems="10"
        android:inputType="date"
        android:text="@string/mm"
        android:layout_toEndOf="@+id/endDate"
        android:layout_marginStart="10dp"/>

    <EditText
        android:id="@+id/endDay"
        android:layout_width="51dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/endDate"
        android:ems="10"
        android:inputType="date"
        android:text="@string/dd"
        android:layout_toEndOf="@+id/endMonth"
        android:layout_marginStart="10dp"/>

    <EditText
        android:id="@+id/endYear"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/endDate"
        android:ems="10"
        android:inputType="date"
        android:text="@string/yyyy"
        android:layout_toEndOf="@+id/endDay"
        android:layout_marginStart="10dp"/>

</RelativeLayout>