<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Course_Details_Activity"
    tools:showIn="@layout/activity_course__details_">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <!-- first row-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/courseViewC2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:text="@string/course"
                    android:textSize="22sp" />


            </RelativeLayout>

            <!-- second row-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/startDateViewC2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:text="@string/start_date"
                    android:textSize="22sp" />

            </RelativeLayout>

            <!-- third row-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">


                <TextView
                    android:id="@+id/endDateC2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:text="@string/end_date"
                    android:textSize="22sp" />

            </RelativeLayout>

            <!-- fourth row-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/status2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:text="@string/status"
                    android:textSize="22sp"/>

            </RelativeLayout>

            <!-- fifth row-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/mentorName2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:text="@string/mentor_name"
                    android:textSize="22sp" />

            </RelativeLayout>

            <!-- sixth row-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/mentorEmail2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:text="@string/mentor_email"
                    android:textSize="22sp" />

            </RelativeLayout>

            <!-- seventh row-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/mentorPhoneNumber2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:text="@string/mentor_phoneNumber"
                    android:textSize="22sp" />

            </RelativeLayout>

            <!-- eighth row-->
            <RelativeLayout
                android:id="@+id/scroll2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/descriptionView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/course_description"
                    android:textSize="22sp" />

            </RelativeLayout>

        </LinearLayout>

</ScrollView>

<!--android:fillViewport="true"
                android:scrollbars="vertical"-->